Fix image filename case in index.html

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <body>
 
 <header>
-<img src="logo.jpg" alt="SAES Transfers Logo">
+<img src="logo.JPG" alt="SAES Transfers Logo">
   <p>Transporte privado premium en Tulum y Riviera Maya</p>
 </header>
 
